Fix text align on estudantes panel

--- a/app/static/style/estudante_home.css
+++ b/app/static/style/estudante_home.css
@@ -226,6 +226,7 @@ main p {
     color: #0d0d0d;
     align-self: flex-end;
     font-weight: bold;
+    text-align: right;
 }
 
 .infoProfessor p:nth-child(1) {
